# branch_allocator

./: Cargo.toml  readme.md
src/: branch.rs  lib.rs  target.rs  test.rs
